[package]
name = "boid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-fu = "0.0.1-alpha"
embedded-time = "0.12.1"
speedy2d = "1.12.0"
turborand = "0.10.0"


[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
